openrewrite Java 21 updates - .get(0) to .getFirst()